[FIX] UI small bugs about overtime +/- and suit
+text ffg_cardModifier on card is not to be selected

--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -1605,7 +1605,15 @@
 .ffg_overtime[data_index='5'].ffg_selectable:hover{
     left: 386px;
 }
-
+.ffg_noselect_text{
+     -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
 .ffg_cardModifier{
     font-size: 80px;
     font-style: italic;
