--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -281,6 +281,9 @@
     text-align: center;
     vertical-align: middle;
 }
+#ffg_showScoreDialogContent table tbody tr td.ffg_player_col{
+    word-wrap: break-word;
+}
 #ffg_showScoreDialogContent table tbody tr:nth-of-type(odd) {
     background-color: lightgray;
 }
