--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -1567,11 +1567,24 @@
 /* ---------------------------- OVERTIME Hours TOKENS          ---------------------------- */
 /* ---------------------------- ----------------------------   ---------------------------- */
 
+.ffg_board_overtime_wrapper{
+    cursor: help;
+    width: 420px;
+    height: 45px;
+    position: absolute;
+    z-index: 1;
+    left: 10px;
+    top: 931px;
+}
+.notouch-device .ffg_board_overtime_wrapper:hover{
+    outline: 4px solid green;
+}
+
 .ffg_overtime{
     position: absolute;
     width: 30px;
     height: 30px;
-    top: 940px;
+    top: 9px;
     cursor: pointer;
     border-radius: 100%;
 }
@@ -1620,34 +1633,34 @@
     outline: 3px solid red;
 }
 .ffg_overtime[data_index='1']{
-    left: 253px;
+    left: 243px;
 }
 .notouch-device .ffg_overtime[data_index='1'].ffg_selectable:hover{
-    left: 245px; /* IMITATION of scale:2 ,  with the background-image : left = left - (50-30)/2 */
+    left: 235px; /* IMITATION of scale:2 ,  with the background-image : left = left - (50-30)/2 */
 }
 .ffg_overtime[data_index='2']{
-    left: 288px;
-}
-.notouch-device .ffg_overtime[data_index='2'].ffg_selectable:hover{
     left: 278px;
 }
-.ffg_overtime[data_index='3']{
-    left: 324px;
+.notouch-device .ffg_overtime[data_index='2'].ffg_selectable:hover{
+    left: 268px;
 }
-.notouch-device .ffg_overtime[data_index='3'].ffg_selectable:hover{
+.ffg_overtime[data_index='3']{
     left: 314px;
 }
-.ffg_overtime[data_index='4']{
-    left: 360px;
+.notouch-device .ffg_overtime[data_index='3'].ffg_selectable:hover{
+    left: 304px;
 }
-.notouch-device .ffg_overtime[data_index='4'].ffg_selectable:hover{
+.ffg_overtime[data_index='4']{
     left: 350px;
 }
+.notouch-device .ffg_overtime[data_index='4'].ffg_selectable:hover{
+    left: 340px;
+}
 .ffg_overtime[data_index='5']{
-    left: 396px;
+    left: 386px;
 }
 .notouch-device .ffg_overtime[data_index='5'].ffg_selectable:hover{
-    left: 386px;
+    left: 376px;
 }
 .ffg_noselect_text{
      -webkit-touch-callout: none; /* iOS Safari */
