[FIX][Mobile] Safari bug outline + radius
Continuation of today' previous commit : apply the same thing to overtime outline on board

--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -1581,9 +1581,21 @@
     cursor: pointer;
     border-radius: 100%;
 }
+/** Safari issue : recreate the outline from scratch */
+.ffg_overtime::after {
+   content: '';
+   position: absolute;
+   left: -3px;
+   top: -3px;
+   right: -3px;
+   bottom: -3px;
+   border-radius: 100%;
+}
 .ffg_overtime.ffg_selectable{
     cursor: pointer;
-    outline: 3px solid blue;
+}
+.ffg_overtime.ffg_selectable::after{
+    border: 3px solid blue;
 }
 .ffg_overtime:not(.ffg_selectable){
     cursor: inherit;
@@ -1619,11 +1631,11 @@
     top: 932px;
     z-index: 2;
 } 
-.ffg_overtime.ffg_positive_value{
-    outline: 3px solid green;
+.ffg_overtime.ffg_positive_value::after{
+    border: 3px solid green;
 }
-.ffg_overtime.ffg_negative_value{
-    outline: 3px solid red;
+.ffg_overtime.ffg_negative_value::after{
+    border: 3px solid red;
 }
 .ffg_overtime[data_index='1']{
     left: 243px;
