--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -1746,4 +1746,5 @@
 /* ---------------------------- ----------------------------   ---------------------------- */
 /* Re enable list style over BGA common CSS, only for wanted section : game WIKI and some tooltips*/ 
 #pagesection_howtoplay li, .ffg_tooltipIconTruck li { margin-left: 2em; } 
+#pagesection_howtoplay ol li { list-style: decimal; } /* BEFORE ul in case there are ul under ol */ 
 #pagesection_howtoplay ul li, .ffg_tooltipIconTruck ul li { list-style: disc; }
