[FIX] Translation strings not taken into account
- Deck pile
- suits buttons
- some tooltips on board

+ Fix css z-index to display tooltip on modal

--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -1459,6 +1459,7 @@
 .ffg_truck_symbol,
 .ffg_symbol_path_size{
     position: absolute;
+    z-index: 2;
 }
 .notouch-device .ffg_truck_symbol:hover,
 .notouch-device .ffg_symbol_path_size:hover{
