--- a/flipfreighters.css
+++ b/flipfreighters.css
@@ -655,17 +655,24 @@
     position: absolute;
     z-index: 4;
     display: flex;
-    flex-flow: row;
-    margin-top: calc(var(--ffg_container_width) + 10px);
+    flex-flow: row wrap;
+    margin-top: calc(var(--ffg_container_width) * (1 + 1.6 * var(--ffg_board_display_scale)));
+    margin-bottom: 10px; /* from whiteblock */
+    padding: 10px; /* from whiteblock */
     background-color: white;
     border-radius: 15%;
     outline: 2px solid black;
+    
+    min-width: calc(var(--ffg_container_width) * 5);
+    transform: scale(var(--ffg_board_display_scale));
+    transform-origin: top left;
 }
 .ffg_cargo_amount, #ffg_arrow, #ffg_cargo_amount_loading{
     width: var(--ffg_container_width);
     height: var(--ffg_container_width);
     outline: 4px dotted black;
     margin-right: 10px;
+    margin-bottom: 10px;
 }
 .ffg_cargo_amount:not(.ffg_selectable) .ffg_container_number{
     visibility: hidden;
